agregando node.js , sass, y gulp

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch src/scss:build/css",
-    "tarea": "gulp tarea"
+    "tarea": "gulp tarea",
+    "css" : "gulp css",
+    "dev": "gulp dev"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "homepage": "https://github.com/Julian-Correa/pagina-de-festival#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "sass": "^1.55.0"
   }
 }
